--- a/app/src/main/res/layout/app_bar_navigation_.xml
+++ b/app/src/main/res/layout/app_bar_navigation_.xml
@@ -29,6 +29,14 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        app:srcCompat="@android:drawable/ic_search_category_default" />
+
+    <Spinner
+        android:id="@+id/fragment_select"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|start"
+        android:layout_margin="@dimen/fragment_select_margin"
+        app:srcCompat="@android:drawable/ic_search_category_default" />
 
 </android.support.design.widget.CoordinatorLayout>
