--- a/app/src/main/res/menu/navigation_.xml
+++ b/app/src/main/res/menu/navigation_.xml
@@ -4,6 +4,11 @@
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/nav_settings"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/language"
+        android:orderInCategory="100"
+        android:title="@string/nav_language"
         app:showAsAction="never" />
 </menu>
