--- a/app/src/main/res/layout/content_navigation_.xml
+++ b/app/src/main/res/layout/content_navigation_.xml
@@ -11,18 +11,12 @@
 
 
     <FrameLayout
-        android:id="@+id/offer"
+        android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
-    <FrameLayout
-        android:id="@+id/gallery"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        
-        </FrameLayout>
+
     <FrameLayout
         android:id="@+id/map"
-        android:name="com.google.android.gms.maps.MapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
