--- a/app/src/main/res/layout/splash_screen_layout.xml
+++ b/app/src/main/res/layout/splash_screen_layout.xml
@@ -36,51 +36,54 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="15dp"
-        android:paddingRight="15dp">
+        android:paddingRight="15dp"
+        android:layout_marginTop="15dp">
 
-        <TableRow>
+        <TableRow
+            android:weightSum="10">
             <ImageButton
                 android:id="@+id/splash_hotels"
+                style="@style/splash_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_hotel_black_24dp"
-                android:layout_weight=".2"
-                android:background="@drawable/btn_border_selector"/>
+                />
 
             <ImageButton
                 android:id="@+id/splash_sights"
+                style="@style/splash_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_terrain_black_24dp"
-                android:layout_weight=".2"
-                android:background="@drawable/btn_border_selector"/>
+                />
 
             <ImageButton
                 android:id="@+id/splash_shops"
+                style="@style/splash_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_local_mall_black_24dp"
-                android:layout_weight=".2"
-                android:background="@drawable/btn_border_selector"/>
+                />
 
             <ImageButton
                 android:id="@+id/splash_events"
+                style="@style/splash_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_golf_course_black_24dp"
-                android:layout_weight=".2"
-                android:background="@drawable/btn_border_selector"/>
+               />
 
             <ImageButton
                 android:id="@+id/splash_all"
+                style="@style/splash_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_all_inclusive_black_24dp"
-                android:layout_weight=".2"
-                android:background="@drawable/btn_border_selector"/>
+                />
         </TableRow>
 
-        <TableRow>
+        <TableRow
+            android:layout_marginTop="5dp">
             <TextView
                 android:textColor="#000000"
                 android:textSize="20sp"
