--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">#FF9900</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -16,5 +16,11 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="splash_btn">
+        <item name="android:layout_margin">1dp</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:layout_weight">2</item>
+        <item name="android:background">@drawable/btn_border_selector</item>
+    </style>
 
 </resources>
