--- a/app/src/main/res/layout/nav_header_navigation_.xml
+++ b/app/src/main/res/layout/nav_header_navigation_.xml
@@ -17,7 +17,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@drawable/logo" />
+        app:srcCompat="@drawable/logo"
+        android:contentDescription="@string/spl_logo"/>
 
     <TextView
         android:id="@+id/nav_slogan"
