--- a/app/src/main/res/layout/content_navigation_.xml
+++ b/app/src/main/res/layout/content_navigation_.xml
@@ -11,6 +11,10 @@
 
 
     <FrameLayout
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="30dp"
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
