--- a/app/src/main/res/layout/gallery_row.xml
+++ b/app/src/main/res/layout/gallery_row.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:descendantFocusability="blocksDescendants">
 
     <ImageView
         android:layout_marginRight="5dp"
@@ -19,7 +20,7 @@
         android:textStyle="bold"
         android:id="@+id/gallery_row_city"
         android:textColor="#FFD700"
-        android:textSize="20sp"
+        android:textSize="17sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ellipsize="end"
@@ -84,7 +85,7 @@
         android:textStyle="bold"
         android:id="@+id/gallery_row_subtype"
         android:textColor="#000000"
-        android:textSize="20sp"
+        android:textSize="17sp"
         android:layout_below="@+id/gallery_row_city"
         android:layout_toEndOf="@+id/gallery_row_star"
         android:layout_toRightOf="@+id/gallery_row_star"
@@ -98,7 +99,7 @@
         tools:text="Name"
         android:id="@+id/gallery_row_name"
         android:textColor="#000000"
-        android:textSize="20sp"
+        android:textSize="17sp"
         android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -110,14 +111,25 @@
         android:layout_toEndOf="@+id/gallery_row_image"
         android:layout_toRightOf="@+id/gallery_row_image"/>
 
+    <ImageButton
+        android:id="@+id/gallery_row_call"
+        android:src="@drawable/ic_call"
+        android:background="#00000000"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/gallery_row_name"
+        android:layout_toEndOf="@+id/gallery_row_image"
+        android:layout_toRightOf="@+id/gallery_row_image"/>
+
     <TextView
         tools:text="+359 125 456"
         android:id="@+id/gallery_row_phone"
         android:textColor="#000000"
-        android:textSize="20sp"
+        android:textSize="17sp"
         android:layout_below="@+id/gallery_row_name"
-        android:layout_toEndOf="@+id/gallery_row_image"
-        android:layout_toRightOf="@+id/gallery_row_image"
+        android:layout_toEndOf="@+id/gallery_row_call"
+        android:layout_toRightOf="@+id/gallery_row_call"
+        android:layout_alignBaseline="@+id/gallery_row_call"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ellipsize="marquee"
