--- a/app/src/main/res/layout/around_me_dialog.xml
+++ b/app/src/main/res/layout/around_me_dialog.xml
@@ -21,6 +21,7 @@
         android:layout_height="wrap_content" />
 
     <SeekBar
+        android:layout_marginTop="5dp"
         android:id="@+id/around_me_seek"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
